--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
-    "lint": "eslint ./"
+    "start-prod": "NODE_ENV=production node ./src/server.js",
+    "start-dev": "nodemon ./src/server.js",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +20,10 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
     "nanoid": "^3.3.6"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^20.1.0",
+    "joi": "^17.9.2",
+    "nanoid": "^3.1.20"
   }
 }
